conf/k8s_yaml/ingress/tomcat/tomcat-deploy_service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0.20-jre8-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: httpport
        - containerPort: 8009
          name: aipport
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: tomcat-svc
  labels:
    app: tomcat-svc
spec:
  selector:
    app: tomcat
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: ajp
    port: 89
    targetPort: 8009
    protocol: TCP
