conf/k8s_yaml/ingress/tomcat/tomcat-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: test
  name: tomcat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - tomcat.example.io
    secretName: tomcat-ingress-secret
  rules:
  - host: tomcat.example.io
    http:
      paths:
      - backend:
          serviceName: tomcat-svc
          servicePort: 80
