conf/k8s_yaml/ingress/tomcat/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: test
  name: tomcat-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-svc
    servicePort: 80
  rules:
  - host: tomcat.example.io
    http:
      paths:
      - backend:
          serviceName: tomcat-svc
          servicePort: 80
